--- a/views/projects/edit.ejs
+++ b/views/projects/edit.ejs
@@ -1,3 +1,4 @@
+<!--プロジェクトに関する修正入力ページ-->
 <div class="data-form">
   <form class="form-signin" action="<%=`/projects/${project._id}/update?_method=PUT`%>" method="POST">
     <h2 class="form-signin-heading">Edit project:</h2>
