--- a/views/projects/new.ejs
+++ b/views/projects/new.ejs
@@ -1,3 +1,4 @@
+<!--新規プロジェクト登録ページ-->
 <div class="data-form">
   <form class="form-signin" action="<%=`/projects/create`%>" method="POST">
     <h2 class="form-signin-heading">プロジェクト新規登録:</h2>
