--- a/views/tasks/edit.ejs
+++ b/views/tasks/edit.ejs
@@ -1,3 +1,4 @@
+<!--タスクに関する修正入力ページ-->
 <div class="data-form">
   <form class="form-signin" action="<%=`/tasks/${task._id}/update?_method=PUT`%>" method="POST">
     <h2 class="form-signin-heading">タスク編集:</h2>
