--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,3 +1,4 @@
+<!--ログインページ-->
 <form class="form-signin" action="/users/login" method="POST">
   <h2 class="form-signin-heading">ログイン:</h2>
   <label for="inputEmail" class="sr-only">メールアドレス</label>
