--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -1,3 +1,4 @@
+<!--新規担当者登録ページ-->
 <div class="data-form">
   <form class="form-signin" action="/users/create" method="POST">
     <h2 class="form-signin-heading">新担当者登録:</h2>
