--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,11 @@
+<!--ランディングページ-->
 <div class="col-sm-4">
   <img src="images/gtd3.jpg" alt="">
 </div>
 <div class="col-sm-8">
   <h1>Get Things Done!</h1>
   <br>
+  <!-- ユーザーがログインしている場合の処理 -->
   <% if (loggedIn) { %>
     <h4> プロジェクト: 完了すべきプロジェクトリスト一覧。</h4>
     <h4> タスク: 各プロジェクトの作業タスク一覧。</h4>
