--- a/views/projects/show.ejs
+++ b/views/projects/show.ejs
@@ -1,3 +1,4 @@
+<!--プロジェクト情報表示ページ-->
 <h1 class="center">プロジェクト情報 :
   <%= project.proname %>
 </h1>
@@ -5,7 +6,7 @@
 <table class="table">
   <tr>
     <th>プロジェクト名</th>
-    <td>
+  <td>
       <%= project.proname %>
     </td>
   </tr>
@@ -17,12 +18,15 @@
   </tr>
 </table>
 
+<!--プロジェクトに関してリンク先設定-->
 <div>
+                              <!-- プロジェクトのIDを編集用ボタンに組み込む。 -->
   <a class="button" href="<%=`/projects/${project._id}/edit`%>">
     プロジェクト編集
   </a>
 </div>
 <div>
+                              <!-- プロジェクトのIDを削除用ボタンに組み込む -->
   <a class="button" href="<%= `/projects/${project._id}/delete?_method=DELETE` %>" onclick="return confirm('本当に削除しますか?')" a>削除</a>
 </div>
 <div>
