--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -1,3 +1,4 @@
+<!--ユーザーに関する修正入力-->
 <div class="data-form">
   <form class="form-signin" method="POST" action="<%=`/users/${user._id}/update?_method=PUT`%>">
     <h2 class="form-signin-heading">担当者情報編集:</h2>
