--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -1,3 +1,4 @@
+<!--担当者情報表示ページ-->
 <h1 class="center">担当者情報:
   <%= user.name %>
 </h1>
@@ -24,12 +25,15 @@
 
 </table>
 
+<!--担当者に関してリンク先ボタン設定-->
 <div class="center">
+                    <!-- ユーザーのIDを編集用ボタンに組み込む。 -->
   <a class="button" href="<%=`/users/${user._id}/edit`%>">
     担当者編集
   </a>
 </div>
 <div class="center">
+                    <!-- ユーザーのIDを削除用ボタンに組み込む。 -->
   <a class="button" href="<%= `/users/${user._id}/delete?_method=DELETE` %>" onclick="return confirm('本当に削除して良いですか?')" a>削除</a>
 </div>
 <div class="center">
